src/main/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  name: oauthregistrationclient-app
spec:
  type: LoadBalancer
  selector:
    app: oauthregistrationclient-app
  ports:
    - port: 80
      targetPort: 8083
