src/main/resources/basic-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: oauthregistrationclient-app
      port:
        number: 8083
