src/main/resources/registration-external-route.yml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  parentRefs:
    - name: external-http
  hostnames:
    - "store.example.com"
  rules:
    - backendRefs:
        - name: store-v1
          port: 8080
